# little-walk-sms-verification-code

./: .env  Cargo.toml
curl/: send_code.curl  verify_code.curl
src/: handlers.rs  main.rs
